game complete build

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,16 @@
   background-color: crimson;
 }
 
+.reset {
+  margin-top: 2rem;
+  font-size: 2rem;
+  background-color: aqua;
+  border: none;
+  border-radius: 6px;
+  padding: 1rem;
+  cursor: pointer;
+}
+
 p {
   font-size: 2rem;
 }
